# minicad

./: .gitignore  CMakeLists.txt  README.md
src/: CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
